--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>我的第一个标题</h1>
     <p>我的第一个段落。</p>
-    <object data="video.mp4" height="400" width="800"></object>
+    <iframe src="//player.bilibili.com/player.html?aid=641312484&bvid=BV1nY4y1b7Tx&cid=714327457&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 </body>
 </html>
