--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>我的第一个标题</h1>
     <p>我的第一个段落。</p>
-    <iframe src="//player.bilibili.com/player.html?aid=641312484&bvid=BV1nY4y1b7Tx&cid=714327457&page=1"allowfullscreen="allowfullscreen" width="50%" height="800" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"> </iframe>
+    <iframe src="//player.bilibili.com/player.html?aid=641312484&bvid=BV1nY4y1b7Tx&cid=714327457&page=1"allowfullscreen="allowfullscreen" width="400" height="800" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"> </iframe>
 </body>
 </html>
